--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "file-system-organiser",
+  "name": "file-system-organiser-from-un-org-to-org",
   "version": "1.0.0",
   "description": "organizes the files in your system",
   "main": "Fo.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [
+    "javascript"
+  ],
   "author": "SIDDHANT SHARMA",
   "license": "ISC"
+
 }
