--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "file-system-organiser-from-un-org-to-org",
-  "version": "1.0.2",
+  "name": "file-organiser",
+  "version": "1.0.3",
   "description": "organizes the files in your system",
   "main": "Fo.js",
   "scripts": {
